<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="pullrequest"
            type="com.example.githubchallenge.model.PullRequest" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:importantForAccessibility="yes"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:cardCornerRadius="200dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:importantForAccessibility="yes"
                    android:contentDescription="@string/imageView_content_description"
                    android:id="@+id/prAvatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/ic_launcher" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:importantForAccessibility="yes"
                android:contentDescription="@string/username_content_description"
                android:id="@+id/prTvUsername"
                android:textColor="@color/titleColor"
                android:layout_marginTop="8dp"
                android:textSize="20sp"
                android:text="@string/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>

            <TextView
                android:importantForAccessibility="yes"
                android:contentDescription="@string/pull_request_titulo"
                android:id="@+id/prTvPullRequestTitle"
                android:textColor="@color/titleColor"
                android:textSize="24sp"
                android:text="@string/pull_request_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="6dp"/>

            <TextView
                android:contentDescription="@string/body_content_description"
                android:id="@+id/prTvBodyPullRequest"
                android:textColor="@color/black"
                android:ellipsize="end"
                android:textSize="16sp"
                android:text="@string/body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


                <TextView
                    android:layout_margin="12dp"
                    android:layout_marginTop="8dp"
                    android:id="@+id/prTvCreateAt"
                    android:textColor="@color/black"
                    android:text="@string/create_At"
                    android:drawablePadding="8dp"
                    android:textSize="18sp"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:drawableLeftCompat="@drawable/baseline_calendar_month_24" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>